--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -3,6 +3,51 @@
 	clear:both;
 }
 
+#top-nav{
+	background: #d7d7d7;
+	padding: 18px 0;
+	position: fixed;
+	z-index: 5;
+	width: 100%;
+	-webkit-backface-visibility:hidden;
+	-webkit-transform:translateZ(0);
+}
+
+#menu{
+	float:right;
+}
+
+#top-content{
+	background: url(../images/bg.jpg) repeat-x top center;
+	-webkit-background-size: cover;
+	background-size: cover;
+	padding: 130px 0 80px 0;
+}
+
+#grid-content{
+	background: url(../images/grid-bg.png);
+	padding: 80px;
+}
+
+#gridimg{
+	margin: 0 auto;
+	display: block;
+}
+
+h1,.wt-l,.cta,h2,span,h4{
+	font-family: 'Source Sans Pro';
+}
+
+h1,.wt-l,h4{
+	color:#fff;
+}
+
+.wt-l{
+	font-size: 1.3em;
+	line-height: 1.5em;
+	padding-bottom: 25px;
+}
+
 
 @media only screen and (max-width: 40.063em) {
 
