--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -152,11 +152,66 @@ h4{
 }
 
 @media only screen and (max-width: 40.063em) {
+	#gridimg{
+		width: 40%;
 
+	}
+	.grid-container{
+		margin: -80px 0 -40px;
+	}
+
+	.wt-l,h1,.auth-content{
+		text-align: center;
+	}
+
+	h1{
+		font-size: 2.2em !important;
+	}
+
+	.cta{
+		display: block;
+		margin: 0 auto;
+	}
+
+	#grid-content, #support-content, #testimonial-content{
+		padding:20px;
+	}
+
+	#svg{
+		margin-top: 25px;
+	}
+
+	#video-content{
+		display: none;
+	}
+
+	.auth-img{
+		margin: 20px 0;
+	}
 
 }
 
 @media only screen and (max-width: 64.063em) {
+	#gridimg{
+		width: 80%;
+		margin-top: 80px;
+	}
+	h1{
+		font-size: 3em;
+	}
+	.header-unit{
+		height: 400px;
+	}
 
+	h4{
+		margin-top: 80px;
+		font-size: 3em;
+	}
 
+	#support-content{
+		padding: 20px;
+	}
+	#svg{
+		margin-top: 45px;
+	}
 }
